feat: add config swatter to route category
